Fixed graph search procedure to be more general

--- a/GraphSearch.ipynb
+++ b/GraphSearch.ipynb
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -179,15 +179,30 @@
     "        return self.edges[v]\n",
     "\n",
     "def predecessor_traverse(p,s,g):\n",
+    "    \"\"\"Used by dijkstra's algorithm to traverse a predecessor dictionary\"\"\"\n",
     "    L = []\n",
     "    v = g\n",
     "    while v is not None:\n",
     "        L.append(v)\n",
-    "        v = p[v]\n",
+    "        v = p.get(v,None)\n",
     "    #rather than prepending, we appended and now we'll reverse.  This is a more efficient than prepending\n",
     "    return L[::-1]\n",
     "    \n",
     "def dijkstras(G,s,g,cost=(lambda v,w:1),verbose=1):\n",
+    "    \"\"\"Completes a shortest-path search on graph G.\n",
+    "    \n",
+    "    Args:\n",
+    "        G (AdjListGraph): the graph, given by an AdjListGraph\n",
+    "        s: the start node\n",
+    "        g: the goal node\n",
+    "        cost (optional): a callback function c(v,w) that returns the edge cost\n",
+    "        verbose (optional): if nonzero, will print information about search\n",
+    "            progress.\n",
+    "    \n",
+    "    Returns:\n",
+    "        list or None: either the path of nodes from s to g with minimum cost,\n",
+    "        or None if no path exists.\n",
+    "    \"\"\"\n",
     "    d = dict((v,float('inf')) for v in G.vertices)\n",
     "    p = dict((v,None) for v in G.vertices)\n",
     "    d[s] = 0\n",
@@ -225,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -288,22 +303,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "### Euclidean distance heuristic"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "A* succeeded in 27 iterations\n",
-      "Path, heuristic 1: [(0, 0), (0, 1), (1, 1), (1, 2), (2, 2), (2, 3), (3, 3), (3, 4), (4, 4), (4, 5), (5, 5)]\n",
+      "Path, heuristic 1: [(0, 0), (0, 1), (1, 1), (1, 2), (2, 2), (2, 3), (3, 3), (3, 4), (4, 4), (4, 5), (5, 5)]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "### Manhattan distance heuristic"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "A* succeeded in 11 iterations\n",
       "Path, heuristic 2: [(0, 0), (0, 1), (0, 2), (0, 3), (0, 4), (0, 5), (1, 5), (2, 5), (3, 5), (4, 5), (5, 5)]\n"
      ]
     }
    ],
    "source": [
+    "#Below is code for the A* algorithm\n",
+    "\n",
+    "from IPython.display import display,Markdown\n",
+    "\n",
     "def astar(G,s,g,cost=(lambda v,w:1),heuristic=(lambda v:0),verbose=1):\n",
+    "    \"\"\"Completes an A* search on graph G.\n",
+    "    \n",
+    "    Args:\n",
+    "        G (AdjListGraph): the graph, given by an AdjListGraph\n",
+    "        s: the start node\n",
+    "        g: the goal node\n",
+    "        cost (optional): a callback function c(v,w) that returns the edge cost\n",
+    "        heuristic (optional): a callback function h(v) that returns the \n",
+    "            heuristic cost-to-go between v and g\n",
+    "        verbose (optional): if nonzero, will print information about search\n",
+    "            progress.\n",
+    "    \n",
+    "    Returns:\n",
+    "        list or None: either the path of nodes from s to g with minimum cost,\n",
+    "        or None if no path exists.\n",
+    "    \"\"\"\n",
     "    d = dict((v,float('inf')) for v in G.vertices)\n",
     "    p = dict((v,None) for v in G.vertices)\n",
     "    d[s] = 0\n",
@@ -322,7 +387,8 @@
     "                #going through v is optimal\n",
     "                #if the predecessor of w is not None, then we'll have to adjust the heap\n",
     "                if p[w] is not None:\n",
-    "                    Q = heapq.heapify([(f,c,x) for (f,c,x) in Q if x is not w])\n",
+    "                    Q = [(f,c,x) for (f,c,x) in Q if x is not w]\n",
+    "                    heapq.heapify(Q)\n",
     "                d[w] = dcand\n",
     "                p[w] = v\n",
     "                #put w back on the queue, with the heuristic value as its priority\n",
@@ -333,16 +399,21 @@
     "\n",
     "import math\n",
     "G = make_grid_graph(10,10)\n",
+    "start = (0,0)\n",
+    "goal = (5,5)\n",
+    "\n",
+    "display(Markdown(\"### Euclidean distance heuristic\"))\n",
     "def h1(x):\n",
     "    \"\"\"Euclidean distance heuristic\"\"\"\n",
-    "    return math.sqrt((x[0]-5)**2+(x[1]-5)**2)\n",
-    "path = astar(G,(0,0),(5,5),heuristic=h1)\n",
+    "    return math.sqrt((x[0]-goal[0])**2+(x[1]-goal[1])**2)\n",
+    "path = astar(G,start,goal,heuristic=h1)\n",
     "print \"Path, heuristic 1:\",path\n",
     "\n",
+    "display(Markdown(\"### Manhattan distance heuristic\"))\n",
     "def h2(x):\n",
     "    \"\"\"Manhattan distance heuristic\"\"\"\n",
-    "    return abs(x[0]-5)+abs(x[1]-5)\n",
-    "path = astar(G,(0,0),(5,5),heuristic=h2)\n",
+    "    return abs(x[0]-goal[0])+abs(x[1]-goal[1])\n",
+    "path = astar(G,start,goal,heuristic=h2)\n",
     "print \"Path, heuristic 2:\",path"
    ]
   },
@@ -370,8 +441,263 @@
     "and depth. However, to construct a search tree properly it is important\n",
     "to detect when the same vertex can be reached with multiple paths so as\n",
     "to keep only the node whose ancestors trace out the shortest path. This\n",
-    "requires auxiliary techniques for *revisited state detection*.\n",
+    "requires auxiliary techniques for *revisited state detection*.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "### Dijkstra, implicit graph"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A* succeeded in 116171 iterations\n",
+      "Path length 101 cost 10.0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "### Euclidean heuristic, implicit graph"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A* succeeded in 6886 iterations\n",
+      "Path length 101 cost 10.0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "### Manhattan heuristic, implicit graph"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A* succeeded in 108 iterations\n",
+      "Path length 101 cost 10.0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "### Dijkstra, 8-connected implicit graph"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A* succeeded in 68441 iterations\n",
+      "Path length 51 cost 7.07106781187\n"
+     ]
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "### Euclidean heuristic, 8-connected implicit graph"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A* succeeded in 51 iterations\n",
+      "Path length 51 cost 7.07106781187\n"
+     ]
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "### Manhattan heuristic, 8-connected implicit graph"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A* succeeded in 51 iterations\n",
+      "Path length 51 cost 7.07106781187\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Below is code for the A* algorithm\n",
     "\n",
+    "def astar_implicit(successors,s,g,cost=(lambda v,w:1),heuristic=(lambda v:0),verbose=1):\n",
+    "    \"\"\"Completes an A* search on a large/infinite implicit graph.\n",
+    "    \n",
+    "    Args:\n",
+    "        successors: a callback function s(v) that returns a list of neighbors \n",
+    "            of a node v.\n",
+    "        s: the start node\n",
+    "        g: the goal node or goal test\n",
+    "        cost (optional): a callback function c(v,w) that returns the edge cost\n",
+    "        heuristic (optional): a callback function h(v) that returns the \n",
+    "            heuristic cost-to-go between v and g\n",
+    "        verbose (optional): if nonzero, will print information about search\n",
+    "            progress.\n",
+    "    \n",
+    "    Returns:\n",
+    "        list or None: either the path of nodes from s to g with minimum cost,\n",
+    "        or None if no path exists.\n",
+    "    \"\"\"\n",
+    "    if not callable(g):\n",
+    "        gtest = lambda x,goal=g: x==g\n",
+    "    else:\n",
+    "        gtest = g\n",
+    "    inf = float('inf')\n",
+    "    d = dict()\n",
+    "    p = dict()\n",
+    "    d[s] = 0\n",
+    "    Q = [(0,0,s)]   #each element is a tuple (f,-c,v) with f=c + heuristic(v), c=cost from start, v=vertex\n",
+    "    nnodes = 0\n",
+    "    while len(Q) > 0:\n",
+    "        f,minus_c,v = heapq.heappop(Q)  #get the element in the queue with the least value of c\n",
+    "        nnodes += 1\n",
+    "        if gtest(v):\n",
+    "            #found a path\n",
+    "            if verbose: print \"A* succeeded in\",nnodes,\"iterations\"\n",
+    "            return predecessor_traverse(p,s,v)\n",
+    "        for w in successors(v):\n",
+    "            dcand = d[v] + cost(v,w)   #this is the cost of going through v to w\n",
+    "            if dcand < d.get(w,float('inf')):\n",
+    "                #going through v is optimal\n",
+    "                #if the predecessor of w is not None, then we'll have to adjust the heap\n",
+    "                if w in p:\n",
+    "                    Q = [(f,c,x) for (f,c,x) in Q if x is not w]\n",
+    "                    heapq.heapify(Q)\n",
+    "                d[w] = dcand\n",
+    "                p[w] = v\n",
+    "                #put w back on the queue, with the heuristic value as its priority\n",
+    "                heapq.heappush(Q,(dcand+heuristic(w),-dcand,w))\n",
+    "    #no path found\n",
+    "    if verbose: print \"A* failed in\",nnodes,\"iterations\"\n",
+    "    return None\n",
+    "\n",
+    "import math\n",
+    "\n",
+    "#defines a fairly dense graph, with step 0.1\n",
+    "delta = 0.1\n",
+    "#defines a coarse graph, with step 1\n",
+    "#delta = 1\n",
+    "\n",
+    "start = (0,0)\n",
+    "goal = (5,5)\n",
+    "\n",
+    "def length_cost(v,w):\n",
+    "    \"\"\"Euclidean length\"\"\"\n",
+    "    return math.sqrt(sum((a-b)**2 for (a,b) in zip(v,w)))\n",
+    "\n",
+    "def successors(n):\n",
+    "    c1 = (n[0]+delta,n[1])\n",
+    "    c2 = (n[0]-delta,n[1])\n",
+    "    c3 = (n[0],n[1]+delta)\n",
+    "    c4 = (n[0],n[1]-delta)\n",
+    "    return [c1,c2,c3,c4]\n",
+    "\n",
+    "def successors_8connected(n):\n",
+    "    c5 = (n[0]+delta,n[1]+delta)\n",
+    "    c6 = (n[0]-delta,n[1]+delta)\n",
+    "    c7 = (n[0]-delta,n[1]+delta)\n",
+    "    c8 = (n[0]-delta,n[1]-delta)\n",
+    "    return successors(n) + [c5,c6,c7,c8]\n",
+    "\n",
+    "#may be needed for rounding errors\n",
+    "def goaltest(n):\n",
+    "    return all(abs(xn-xg) < delta*0.5 for (xn,xg) in zip(n,goal))\n",
+    "\n",
+    "\n",
+    "display(Markdown(\"### Dijkstra, implicit graph\"))\n",
+    "path = astar_implicit(successors,start,goaltest,cost=length_cost)\n",
+    "print \"Path length\",len(path),\"cost\",sum(length_cost(a,b) for (a,b) in zip(path[:-1],path[1:]))\n",
+    "\n",
+    "display(Markdown(\"### Euclidean heuristic, implicit graph\"))\n",
+    "def h1(x):\n",
+    "    \"\"\"Euclidean distance heuristic\"\"\"\n",
+    "    return math.sqrt((x[0]-goal[0])**2+(x[1]-goal[1])**2)\n",
+    "path = astar_implicit(successors,start,goaltest,cost=length_cost,heuristic=h1)\n",
+    "print \"Path length\",len(path),\"cost\",sum(length_cost(a,b) for (a,b) in zip(path[:-1],path[1:]))\n",
+    "\n",
+    "display(Markdown(\"### Manhattan heuristic, implicit graph\"))\n",
+    "def h2(x):\n",
+    "    \"\"\"Manhattan distance heuristic\"\"\"\n",
+    "    return abs(x[0]-goal[0])+abs(x[1]-goal[1])\n",
+    "path = astar_implicit(successors,start,goaltest,cost=length_cost,heuristic=h2)\n",
+    "print \"Path length\",len(path),\"cost\",sum(length_cost(a,b) for (a,b) in zip(path[:-1],path[1:]))\n",
+    "\n",
+    "display(Markdown(\"### Dijkstra, 8-connected implicit graph\"))\n",
+    "path = astar_implicit(successors_8connected,start,goaltest,cost=length_cost)\n",
+    "print \"Path length\",len(path),\"cost\",sum(length_cost(a,b) for (a,b) in zip(path[:-1],path[1:]))\n",
+    "\n",
+    "display(Markdown(\"### Euclidean heuristic, 8-connected implicit graph\"))\n",
+    "def h1(x):\n",
+    "    \"\"\"Euclidean distance heuristic\"\"\"\n",
+    "    return math.sqrt((x[0]-goal[0])**2+(x[1]-goal[1])**2)\n",
+    "path = astar_implicit(successors_8connected,start,goaltest,cost=length_cost,heuristic=h1)\n",
+    "print \"Path length\",len(path),\"cost\",sum(length_cost(a,b) for (a,b) in zip(path[:-1],path[1:]))\n",
+    "\n",
+    "display(Markdown(\"### Manhattan heuristic, 8-connected implicit graph\"))\n",
+    "def h2(x):\n",
+    "    \"\"\"Manhattan distance heuristic\"\"\"\n",
+    "    return abs(x[0]-goal[0])+abs(x[1]-goal[1])\n",
+    "path = astar_implicit(successors_8connected,start,goaltest,cost=length_cost,heuristic=h2)\n",
+    "print \"Path length\",len(path),\"cost\",sum(length_cost(a,b) for (a,b) in zip(path[:-1],path[1:]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Multi-source / multi-goal search\n",
     "\n",
     "It is also easy to perform a multi-source and/or multi-goal graph\n",
@@ -414,7 +740,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.12"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
