Fixed some formatting issues

--- a/WhatIsMotionPlanning.ipynb
+++ b/WhatIsMotionPlanning.ipynb
@@ -136,7 +136,7 @@
     "configurations that do not violate any motion constraints. This is known\n",
     "as the *free space* $\\mathcal{F} \\subseteq \\mathcal{C}$ defined such\n",
     "that\n",
-    "$$\\mathcal{F} = \\{ q \\in \\mathcal{C}\\quad |\\quad q_{min} \\leq q \\leq q_{max} \\text{ and } R(q) \\cap E = \\emptyset \\}.$$\n",
+    "$$\\mathcal{F} = \\{ q \\in \\mathcal{C} \\,|\\, q_{min} \\leq q \\leq q_{max} \\text{ and } R(q) \\cap E = \\emptyset \\}.$$\n",
     "Here, $q_{min}$ and $q_{max}$ are the lower and upper joint limits,\n",
     "respectively, $R(q) \\subset \\mathbb{R}^2$ or $\\mathbb{R}^3$ is the\n",
     "subset of workspace occupied by the robot, and $E$ is the subset of the\n",
@@ -403,7 +403,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.12"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
