Updated for Klamp't 0.8 structure

--- a/3DRotations.ipynb
+++ b/3DRotations.ipynb
@@ -1039,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "code_folding": [
      0
@@ -1049,12 +1049,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "69ba37e1e752444ab69f25ac7fde40fe",
+       "model_id": "0507bad1227d4882a05f1c33547e194a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "SEJveChjaGlsZHJlbj0oVkJveChjaGlsZHJlbj0oVkJveChjaGlsZHJlbj0oTGFiZWwodmFsdWU9dSdFdWxlciBhbmdsZXMnKSwgVkJveChjaGlsZHJlbj0oRmxvYXRTbGlkZXIodmFsdWU9MC7igKY=\n"
+       "HBox(children=(VBox(children=(VBox(children=(Label(value='Euler angles'), VBox(children=(FloatSlider(value=0.0…"
       ]
      },
      "metadata": {},
@@ -1069,7 +1069,7 @@
     "import math\n",
     "from IPython.display import clear_output\n",
     "import ipywidgets as widgets\n",
-    "import ipyklampt\n",
+    "from klampt.vis import ipython as ipyklampt\n",
     "\n",
     "world = WorldModel()\n",
     "def make_frame_widget(name,size,opacity=1.0):\n",
@@ -1112,7 +1112,7 @@
     "\n",
     "kvis = ipyklampt.KlamptWidget(world,width=350,height=350)\n",
     "#zoom in a little\n",
-    "kvis.set_camera({u'near': 0.1, u'target': {u'y': 0.146443072460387, u'x': 0.08312657322959151, u'z': 0}, u'far': 1000, u'position': {u'y': 0.7493652567628877, u'x': 0.07405620728023105, u'z': 1.7117987931956757}, u'up': {u'y': 0.9921955328504627, u'x': -0.0023691959056403237, u'z': 0.12466920831683183}})\n",
+    "kvis.setCamera({u'near': 0.1, u'target': {u'y': 0.146443072460387, u'x': 0.08312657322959151, u'z': 0}, u'far': 1000, u'position': {u'y': 0.7493652567628877, u'x': 0.07405620728023105, u'z': 1.7117987931956757}, u'up': {u'y': 0.9921955328504627, u'x': -0.0023691959056403237, u'z': 0.12466920831683183}})\n",
     "\n",
     "#define callbacks for interactive updates\n",
     "def euler_update_cb(b):\n",
@@ -1123,14 +1123,14 @@
     "    axis = (math.cos(aa_params[0])*math.cos(aa_params[1]),math.sin(aa_params[0])*math.cos(aa_params[1]),math.sin(aa_params[1]))\n",
     "    T = (so3.from_axis_angle((axis,aa_params[2])),aa_translation)\n",
     "    set_frame_widget_xform(\"aa_rotation\",T)\n",
-    "    kvis.add_line(\"aa_axis\",*(aa_translation + vectorops.madd(aa_translation,axis,0.3)))\n",
-    "    kvis.set_color(\"aa_axis\",1,0.5,0)\n",
+    "    kvis.addLine(\"aa_axis\",*(aa_translation + vectorops.madd(aa_translation,axis,0.3)))\n",
+    "    kvis.setColor(\"aa_axis\",1,0.5,0)\n",
     "    kvis.update()\n",
     "def vector_update_cb(b):\n",
     "    T = (so3.from_moment(rv),vector_translation)\n",
     "    set_frame_widget_xform(\"vector_rotation\",T)\n",
-    "    kvis.add_line(\"rv_axis\",*(vector_translation + vectorops.madd(vector_translation,rv,0.2)))\n",
-    "    kvis.set_color(\"rv_axis\",1,0.5,0)\n",
+    "    kvis.addLine(\"rv_axis\",*(vector_translation + vectorops.madd(vector_translation,rv,0.2)))\n",
+    "    kvis.setColor(\"rv_axis\",1,0.5,0)\n",
     "    kvis.update()\n",
     "def quaternion_update_cb(b):\n",
     "    w = 1.0-vectorops.dot(quat,quat)\n",
@@ -1189,21 +1189,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
