--- a/Kinematics.ipynb
+++ b/Kinematics.ipynb
@@ -869,20 +869,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.7071067811865478, 1.7071067811865475, 0.0]\n",
-      "[0.7071067811865478, 1.7071067811865475, 0.0]\n"
+      "World position of point at q=(pi/4,pi/4): [0.7071067811865476, 1.707106781186548, 0.0]\n",
+      "World position of the end_effector frame [0.7071067811865476, 1.707106781186548, 0.0]\n"
      ]
     }
    ],
    "source": [
     "#Code for doing basic forward kinematics with Klamp't\n",
+    "from __future__ import print_function,division\n",
     "from klampt import *\n",
     "import math\n",
     "world = WorldModel()\n",
@@ -892,12 +893,12 @@
     "#modifies the current configuration of the robot -- the 3rd element is just the end effector frame\n",
     "robot.setConfig([math.pi/4,math.pi/4,0])\n",
     "#returns the world coordinates of a point on link_2 whose local coordinates are [1,0,0]\n",
-    "print robot.link(\"link_2\").getWorldPosition([1,0,0])\n",
+    "print(\"World position of point at q=(pi/4,pi/4):\",robot.link(\"link_2\").getWorldPosition([1,0,0]))\n",
     "#or, with the end effector frame added... \n",
     "#getTransform() returns a pair (R,t) giving the rotation and translation of the\n",
     "#end effector frame, so the R,t = ... syntax extracts the translation only\n",
     "R,t = robot.link(\"end_effector\").getTransform()\n",
-    "print t"
+    "print(\"World position of the end_effector frame\",t)"
    ]
   },
   {
@@ -997,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "code_folding": [
      0
@@ -1007,12 +1008,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0e24105bf956459c8108d1feb7518d88",
+       "model_id": "1f4c09ff20b34a2aa3cd7244d77ee5c2",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "S2xhbXB0V2lkZ2V0KGNhbWVyYT17dSdmYXInOiAxMDAwLCB1J3Bvc2l0aW9uJzoge3UneSc6IDYuNzAyNTYzNDQ0MTQ5MzY3LCB1J3gnOiAwLjI3MDU3NjMxMzUzMzA1ODQ0LCB1J3onOiAtMC7igKY=\n"
+       "KlamptWidget(camera={'near': 0.1, 'target': {'y': 0, 'x': 0, 'z': 0}, 'far': 1000, 'position': {'y': 6.7025634…"
       ]
      },
      "metadata": {},
@@ -1021,12 +1022,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "313c425b2fe048f2a0b5b0b3dc864959",
+       "model_id": "80ca3387f2fb4035a68b086c5630e177",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VkJveChjaGlsZHJlbj0oRmxvYXRTbGlkZXIodmFsdWU9MC4wLCBkZXNjcmlwdGlvbj11J0xpbmsgMCcsIG1heD02LjI4MzE5LCBzdGVwPTAuMDAxKSwgRmxvYXRTbGlkZXIodmFsdWU9MC4wLCDigKY=\n"
+       "VBox(children=(FloatSlider(value=0.0, description='Link 0', max=6.28319, step=0.001), FloatSlider(value=0.0, d…"
       ]
      },
      "metadata": {},
@@ -1041,7 +1042,7 @@
     "import math\n",
     "from IPython.display import HTML,clear_output\n",
     "import ipywidgets as widgets\n",
-    "import ipyklampt\n",
+    "from klampt.vis import ipython as ipyklampt\n",
     "\n",
     "world = WorldModel()\n",
     "world.readFile(\"data/planar2R.rob\")\n",
@@ -1051,19 +1052,19 @@
     "robot.link(1).appearance().setColor(0.2,0.2,0.2)\n",
     "kvis = ipyklampt.KlamptWidget(world,width=400,height=400)\n",
     "#look down\n",
-    "kvis.set_camera({u'near': 0.1, u'target': {u'y': 0, u'x': 0, u'z': 0}, u'far': 1000, u'position': {u'y': 6.702563444149367, u'x': 0.27057631353305844, u'z': -0.049312632332197764}, u'up': {u'y': 0.44113772676914204, u'x': -0.003726563135538217, u'z': -0.897431679153433}})\n",
+    "kvis.setCamera({u'near': 0.1, u'target': {u'y': 0, u'x': 0, u'z': 0}, u'far': 1000, u'position': {u'y': 6.702563444149367, u'x': 0.27057631353305844, u'z': -0.049312632332197764}, u'up': {u'y': 0.44113772676914204, u'x': -0.003726563135538217, u'z': -0.897431679153433}})\n",
     "\n",
     "#called whenever configuration is edited\n",
     "def config_update_cb(index,value):\n",
-    "    kvis.begin_rpc()\n",
+    "    kvis.beginRpc()\n",
     "    for i in range(robot.numLinks()):\n",
     "        Ti = robot.link(i).getTransform()\n",
-    "        kvis.add_xform(\"xform\"+str(i),length=0.5,width=2.0)\n",
-    "        kvis.set_transform(\"xform\"+str(i),R=Ti[0],t=vectorops.add(Ti[1],[0,0,0.1]))\n",
+    "        kvis.addXform(\"xform\"+str(i),length=0.5,width=2.0)\n",
+    "        kvis.setTransform(\"xform\"+str(i),R=Ti[0],t=vectorops.add(Ti[1],[0,0,0.1]))\n",
     "    x,y,z = robot.link(robot.numLinks()-1).getWorldPosition(ee_local)\n",
-    "    kvis.add_sphere(\"ee_position\",x,y,z,0.05)\n",
-    "    kvis.add_text(\"wcoords\",text=\"World coords: %f %f %f\"%(x,y,z),x=1,y=1)\n",
-    "    kvis.end_rpc()\n",
+    "    kvis.addSphere(\"ee_position\",x,y,z,0.05)\n",
+    "    kvis.addText(\"wcoords\",text=\"World coords: %f %f %f\"%(x,y,z),position=(1,1))\n",
+    "    kvis.endRpc()\n",
     "config_widget = ipyklampt.EditConfig(world.robot(0),kvis,link_selector='all',callback=config_update_cb)\n",
     "\n",
     "x,y,z = robot.link(1).getWorldPosition(ee_local)\n",
@@ -1081,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "code_folding": [
      0
@@ -1091,12 +1092,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9d87d54c4fb24764999e90c89c86d39f",
+       "model_id": "27948f2b648b42bb95ea82525cb12b8d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "S2xhbXB0V2lkZ2V0KGNhbWVyYT17dSdmYXInOiAxMDAwLCB1J3Bvc2l0aW9uJzoge3UneSc6IDYuNzAyNTYzNDQ0MTQ5MzY3LCB1J3gnOiAwLjI3MDU3NjMxMzUzMzA1ODQ0LCB1J3onOiAtMC7igKY=\n"
+       "KlamptWidget(camera={'near': 0.1, 'target': {'y': 0, 'x': 0, 'z': 0}, 'far': 1000, 'position': {'y': 6.7025634…"
       ]
      },
      "metadata": {},
@@ -1105,12 +1106,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6f9cb08d26b2449c8adb2f5ce844b231",
+       "model_id": "44aabdaa824b4b93b4feec05afebf810",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VkJveChjaGlsZHJlbj0oRmxvYXRTbGlkZXIodmFsdWU9MC4wLCBkZXNjcmlwdGlvbj11J0xpbmsgMCcsIG1heD02LjI4MzE5LCBzdGVwPTAuMDAxKSwgRmxvYXRTbGlkZXIodmFsdWU9MS4wLCDigKY=\n"
+       "VBox(children=(FloatSlider(value=0.0, description='Link 0', max=6.28319, step=0.001), FloatSlider(value=1.0, d…"
       ]
      },
      "metadata": {},
@@ -1125,7 +1126,7 @@
     "import math\n",
     "from IPython.display import HTML,clear_output\n",
     "import ipywidgets as widgets\n",
-    "import ipyklampt\n",
+    "from klampt.vis import ipython as ipyklampt\n",
     "\n",
     "world = WorldModel()\n",
     "world.readFile(\"data/planarRP.rob\")\n",
@@ -1135,19 +1136,19 @@
     "robot.link(1).appearance().setColor(0.2,0.2,0.2)\n",
     "kvis = ipyklampt.KlamptWidget(world,width=400,height=400)\n",
     "#look down\n",
-    "kvis.set_camera({u'near': 0.1, u'target': {u'y': 0, u'x': 0, u'z': 0}, u'far': 1000, u'position': {u'y': 6.702563444149367, u'x': 0.27057631353305844, u'z': -0.049312632332197764}, u'up': {u'y': 0.44113772676914204, u'x': -0.003726563135538217, u'z': -0.897431679153433}})\n",
+    "kvis.setCamera({u'near': 0.1, u'target': {u'y': 0, u'x': 0, u'z': 0}, u'far': 1000, u'position': {u'y': 6.702563444149367, u'x': 0.27057631353305844, u'z': -0.049312632332197764}, u'up': {u'y': 0.44113772676914204, u'x': -0.003726563135538217, u'z': -0.897431679153433}})\n",
     "\n",
     "#called whenever configuration is edited\n",
     "def config_update_cb(index,value):\n",
-    "    kvis.begin_rpc()\n",
+    "    kvis.beginRpc()\n",
     "    for i in range(robot.numLinks()):\n",
     "        Ti = robot.link(i).getTransform()\n",
-    "        kvis.add_xform(\"xform\"+str(i),length=0.5,width=2.0)\n",
-    "        kvis.set_transform(\"xform\"+str(i),R=Ti[0],t=vectorops.add(Ti[1],[0,0,0.1]))\n",
+    "        kvis.addXform(\"xform\"+str(i),length=0.5,width=2.0)\n",
+    "        kvis.setTransform(\"xform\"+str(i),R=Ti[0],t=vectorops.add(Ti[1],[0,0,0.1]))\n",
     "    x,y,z = robot.link(robot.numLinks()-1).getWorldPosition(ee_local)\n",
-    "    kvis.add_sphere(\"ee_position\",x,y,z,0.05)\n",
-    "    kvis.add_text(\"wcoords\",text=\"World coords: %f %f %f\"%(x,y,z),x=1,y=1)\n",
-    "    kvis.end_rpc()\n",
+    "    kvis.addSphere(\"ee_position\",x,y,z,0.05)\n",
+    "    kvis.addText(\"wcoords\",text=\"World coords: %f %f %f\"%(x,y,z),position=(1,1))\n",
+    "    kvis.endRpc()\n",
     "config_widget = ipyklampt.EditConfig(world.robot(0),kvis,link_selector='all',callback=config_update_cb)\n",
     "\n",
     "x,y,z = robot.link(1).getWorldPosition(ee_local)\n",
@@ -1165,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {
     "code_folding": [
      0
@@ -1175,12 +1176,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "afa09d3946de455188bfea471e80c8b1",
+       "model_id": "ade51ddcd5e7442b9358ac10b8fd372c",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "S2xhbXB0V2lkZ2V0KGhlaWdodD00MDAsIHNjZW5lPXt1J29iamVjdCc6IHt1J21hdHJpeCc6IFsxLCAwLCAwLCAwLCAwLCAwLCAtMSwgMCwgMCwgMSwgMCwgMCwgMCwgMCwgMCwgMV0sIHUndXXigKY=\n"
+       "KlamptWidget(height=400, scene={'metadata': {'version': 4.4, 'type': 'Object', 'fullscene': True, 'generator':…"
       ]
      },
      "metadata": {},
@@ -1189,12 +1190,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e196aae7f792490eb5cda078af365b15",
+       "model_id": "059162a2485f4331af20a2e5ed19057a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VkJveChjaGlsZHJlbj0oRmxvYXRTbGlkZXIodmFsdWU9MC4wLCBkZXNjcmlwdGlvbj11J0xpbmsgMScsIG1heD0zLjEyNDEzOTM2MTA2OTg1LCBtaW49LTMuMTI0MTM5MzYxMDY5ODUsIHN0ZXDigKY=\n"
+       "VBox(children=(FloatSlider(value=0.0, description='Link 1', max=3.12413936106985, min=-3.12413936106985, step=…"
       ]
      },
      "metadata": {},
@@ -1209,7 +1210,7 @@
     "import math\n",
     "from IPython.display import HTML,clear_output\n",
     "import ipywidgets as widgets\n",
-    "import ipyklampt\n",
+    "from klampt.vis import ipython as ipyklampt\n",
     "\n",
     "world = WorldModel()\n",
     "world.readFile(\"data/tx90l.rob\")\n",
@@ -1221,15 +1222,15 @@
     "\n",
     "#called whenever configuration is edited\n",
     "def config_update_cb(index,value):\n",
-    "    kvis.begin_rpc()\n",
+    "    kvis.beginRpc()\n",
     "    for i in range(robot.numLinks()):\n",
     "        Ti = robot.link(i).getTransform()\n",
-    "        kvis.add_xform(\"xform\"+str(i),length=0.5,width=2.0)\n",
-    "        kvis.set_transform(\"xform\"+str(i),R=Ti[0],t=Ti[1])\n",
+    "        kvis.addXform(\"xform\"+str(i),length=0.5,width=2.0)\n",
+    "        kvis.setTransform(\"xform\"+str(i),R=Ti[0],t=Ti[1])\n",
     "    x,y,z = robot.link(robot.numLinks()-1).getWorldPosition(ee_local)\n",
-    "    kvis.add_sphere(\"ee_position\",x,y,z,0.05)\n",
-    "    kvis.add_text(\"wcoords\",text=\"World coords: %f %f %f\"%(x,y,z),x=1,y=1)\n",
-    "    kvis.end_rpc()\n",
+    "    kvis.addSphere(\"ee_position\",x,y,z,0.05)\n",
+    "    kvis.addText(\"wcoords\",text=\"World coords: %f %f %f\"%(x,y,z),position=(1,1))\n",
+    "    kvis.endRpc()\n",
     "config_widget = ipyklampt.EditConfig(world.robot(0),kvis,link_selector='all',callback=config_update_cb)\n",
     "\n",
     "x,y,z = robot.link(1).getWorldPosition(ee_local)\n",
@@ -1248,21 +1249,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
