--- a/OptimalControl.ipynb
+++ b/OptimalControl.ipynb
@@ -47,7 +47,7 @@
     "*cost functional* over the entire trajectory $x$ and $u$:\n",
     "$$J(x,u) = \\int_0^\\infty L(x(t),u(t),t) dt.$$ The term *functional*\n",
     "indicates that this is a function mapping a function to a real number.\n",
-    "The term $L(x,u,t)$ is known as the *instantaneous cost* which is\n",
+    "The term $L(x,u,t)$ is known as the *instantaneous cost* (or *running cost*) which is\n",
     "accumulated over time, and should be chosen to be nonnegative and to\n",
     "penalize certain undesirable states, velocities, or controls. Its units\n",
     "are cost units per second.\n",
@@ -68,14 +68,17 @@
     "### Cost functionals\n",
     "\n",
     "A variety of behaviors can be specified in this framework by modifying\n",
-    "the instantaneous cost. For example, one might penalize trajectory\n",
-    "tracking squared error $L(x,u,t) = \\|x - x_D(t)\\|^2$. Minimizing effort\n",
-    "can be defined in terms of a control penalty $\\|u\\|^2$. Minimum time to\n",
-    "hit a target $x_{tgt}$ could be implemented as an indicator function\n",
-    "$I[x\\neq x_{tgt}$ where $I[z]$ is 1 if $z$ is true, and 0 otherwise.\n",
-    "Obstacle avoidance and other feasibility constraints can be implemented\n",
-    "as indicator functions as well, $\\infty \\cdot I[x \\notin \\mathcal{F}]$\n",
-    "where $\\mathcal{F}$ is the free space.\n",
+    "the instantaneous cost. For example:\n",
+    "\n",
+    "- Trajectory tracking for a trajectory $x_D(t)$ can be implemented by penalizing squared error $L(x,u,t) = \\|x - x_D(t)\\|^2$.\n",
+    "- Minimizing effort can be defined in terms of a control penalty $\\|u\\|^2$.\n",
+    "- Minimum time to hit a target $x_{tgt}$ could be implemented as an indicator function $I[x\\neq x_{tgt}$ where $I[z]$ is 1 if $z$ is true, and 0 otherwise.\n",
+    "- Obstacle avoidance and other feasibility constraints can be implemented as indicator functions as well, $\\infty \\cdot I[x \\notin \\mathcal{F}]$ where $\\mathcal{F}$ is the free space.\n",
+    "- Smoothed obstacle avoidance can be implemented by a repulsive barrier that decreases to 0 when the distance to the closest obstacle $d$ exceeds some minimum buffer distance $d_{min}$ and incrases to infinity as the distance shrinks to 0. One common form of this barrier is $L(x,u,t) = 1/d^2 - 1/d_{min}^2$ when $d < d_{min}$ and $L(x,u,t) = 0$ otherwise.\n",
+    "\n",
+    "It is common to mix and match different types of costs functionals using a _weighted cost functional_ $$J(x,u) = \\sum_{i=1}^N w_i J_i(x,u)$$\n",
+    "where each $J_i(x,u)$ is some primitive cost functional and $w_i$ scales its contribution to the final cost. By tuning these weights, a designer can encourage the optimized trajectories to emphasize some aspects of the trajectory over others.\n",
+    "\n",
     "\n",
     "### Finite horizon optimal control and discounting\n",
     "\n",
@@ -129,8 +132,13 @@
     "the problem as a finite dimensional optimization. These are more\n",
     "general-purpose and can be applied to complex problems, but are more\n",
     "computationally expensive and usually require some parameter tuning to\n",
-    "obtain high-quality solutions.\n",
-    "\n",
+    "obtain high-quality solutions.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "LQR control\n",
     "-----------\n",
     "\n",
@@ -486,7 +494,13 @@
     "effective ways to handle minima, but in the high dimensional spaces of\n",
     "trajectory optimization, a prohibitive number of restarts is needed to\n",
     "have a high chance of finding a global optimum.\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Hamilton-Jacobi-Bellman Equation\n",
     "--------------------------------\n",
     "\n",
@@ -504,11 +518,14 @@
     "We start by formulating the HJB equation in discrete time. Consider a\n",
     "finite-horizon optimal control problem, and define the *value function*\n",
     "as a function\n",
-    "$V(x,t) \\mathbb{R}^n \\times \\mathbb{R} \\rightarrow \\mathbb{R}$ the\n",
-    "*minimum possible added cost* that could be obtained by any trajectory\n",
-    "starting from initial state $x$ and time $t$. In other words, it\n",
-    "truncates the lower point in the integral in $J(x,u)$ to start from time\n",
-    "$t$.\n",
+    "$V(x,t) : \\mathbb{R}^n \\times \\mathbb{R} \\rightarrow \\mathbb{R}$ that defines the\n",
+    "*minimum possible accumulated cost* that could be obtained by any trajectory\n",
+    "starting from initial state $x$ and time $t$.  In other words, let us define the\n",
+    "truncated cost functional\n",
+    "$$J_t(x,u) = \\int_t^T L(x,u,s) ds + \\Phi(x(T))$$\n",
+    "which truncates the lower point in the integral term of $J(x,u)$ to start from time\n",
+    "$t$. (Obviously, $J(x,u)=J_0(x,u)$.)  Then, the value function is the minimizer of\n",
+    "the truncated cost over all possible future controls: $V(x,t) = \\min_u(J_t(x,u))$.\n",
     "\n",
     "It is apparent that at time $T$, the only term that remains is the\n",
     "terminal cost, so one boundary term is given: $$V(x,T) = \\Phi(x).$$ Now\n",
@@ -627,8 +644,13 @@
     "employed in practice it usually does not satisfy many theoretical\n",
     "stability / convergence properties. However, with careful tuning, MPC\n",
     "can an extremely high performing and practical nonlinear optimal control\n",
-    "technique.\n",
-    "\n",
+    "technique.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Summary\n",
     "-------\n",
     "\n",
@@ -673,9 +695,13 @@
     "| HJB              |Numerical   |Discretize and solve over state space. |\n",
     "| MPC              |Numerical   |Closed-loop control by repeated optimization |\n",
     "\n",
-    "********************************************************************\n",
-    "\n",
-    "\n",
+    "********************************************************************\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Exercises\n",
     "---------\n",
     "\n",
@@ -690,7 +716,11 @@
     "    Express this as an LTI system, and solve for the LQR gain matrix $K$\n",
     "    with the cost terms $Q=\\begin{bmatrix}{10}&{0}\\\\{0}&{1}\\end{bmatrix}$ and $R=5$.\n",
     "\n",
-    "3.  TBD\\...\n"
+    "3. Let $V^*(x)$ denote the infinite-horizon value function (i.e., the cost incurred by the optimal infinite-horizon control starting at $x$).  Now define a finite-horizon optimal control problem with horizon $T$, the same incremental cost $L$, and terminal cost $\\Phi(x) = V^\\*(x)$. Prove that the solution to this finite-horizon optimal control problem is identical to the infinite horizon optimal control problem for all $x$.\n",
+    "\n",
+    "4. Let $V^*_T(x)$ denote the $T$-horizon value function for a terminal cost function $\\Phi$.  Suppose that $0 \\leq T_1 < T_2$. Is it always true that $V*_{T2}(x) \\geq V^*_{T1}(x)$?  If so, give a proof. If not, define a condition on $\\Phi$ that would make this condition true.\n",
+    "\n",
+    "5.  TBD\\...\n"
    ]
   },
   {
@@ -703,21 +733,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
