Corrected some capitalization

--- a/GeometricMotionPlanning.ipynb
+++ b/GeometricMotionPlanning.ipynb
@@ -663,7 +663,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Motion Planning in SE(2)\n",
+    "### Motion planning in SE(2)\n",
     "\n",
     "Although some geometric techniques have been developed for planning in\n",
     "SE(2), it is more common to adopt resolution-complete techniques to\n",
