--- a/GraphSearch.ipynb
+++ b/GraphSearch.ipynb
@@ -62,7 +62,7 @@
     "$m$.\n",
     "\n",
     "\n",
-    "## Graph Search\n",
+    "## Graph search\n",
     "\n",
     "Given start and goal vertices, respectively $s,g \\in V$, the goal of\n",
     "graph search is to find a sequence of vertices:\n",
