--- a/Calculus.ipynb
+++ b/Calculus.ipynb
@@ -104,7 +104,7 @@
     "Or, equivalently, it is the set of points for which all $r$-neighborhoods with $r>0$ contain at least one point of $A$\n",
     "and one point of its complement.\n",
     "\n",
-    "## Functions in Higher Dimensions\n",
+    "## Functions in higher dimensions\n",
     "\n",
     "We will often work with functions that map many variables (a vector) to\n",
     "a single number (a scalar). A *scalar field*\n",
@@ -309,7 +309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.12"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
