--- a/Book.ipynb
+++ b/Book.ipynb
@@ -29,7 +29,7 @@
     "  * [Chapter 4. 3D rotations](3DRotations.ipynb)\n",
     "  * [Chapter 5. Robot kinematics](Kinematics.ipynb)\n",
     "  * [Chapter 6. Inverse kinematics](InverseKinematics.ipynb)\n",
-    "  * [Chapter 7. Representing geometry](Geometry.ipynb) **50% complete**\n",
+    "  * [Chapter 7. Representing geometry](Geometry.ipynb) **75% complete**\n",
     "\n",
     "* Section III. Motion Planning\n",
     "\n",
@@ -85,8 +85,8 @@
     "1. Install software for running the notebook:\n",
     "\n",
     "  * [Git](https://git-scm.com/download)\n",
-    "  * Python 2.7 and [Jupyter Notebook](http://jupyter.org), or a Python distribution like Anaconda.\n",
-    "  * [Klamp't](https://github.com/krishauser/Klampt) 0.8 Python API.\n",
+    "  * Python 2.7 or 3.4+ and [Jupyter Notebook](http://jupyter.org), or a Python distribution like Anaconda.\n",
+    "  * [Klamp't](https://github.com/krishauser/Klampt) 0.8.1+ Python API.\n",
     "  * [Klampt-jupyter-extension](http://github.com/krishauser/Klampt-jupyter-extension) for live Klamp't windows.\n",
     "  * [jupyter_contrib_nbextensions](https://github.com/ipython-contrib/jupyter_contrib_nbextensions) for LaTeX and table of content support. \n",
     "  \n",
@@ -149,7 +149,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.5.2"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
