Added some exercises

--- a/Geometry.ipynb
+++ b/Geometry.ipynb
@@ -1145,23 +1145,35 @@
     "---------\n",
     "\n",
     "1.  Write pseudocode to fully develop the convex polygon-polygon\n",
-    "    collision detection algorithm <a href=\"#Collision-Detection-Between-Convex-Polygons-in-2D\">described above</a>. What is the time\n",
+    "    collision detection algorithm <a href=\"#Collision-detection-between-convex-polygons-in-2D\">described above</a>. What is the time\n",
     "    complexity of this algorithm? Your answer should be in terms of $m$\n",
     "    and $n$, the number of vertices of each polygon.\n",
     "\n",
     "2.  Write pseudocode to fully develop the polygon-polygon collision\n",
-    "    detection algorithm for *non-convex polygons* briefly <a href=\"#Collision-Detection-Between-Convex-Polygons-in-2D\">described above</a>. What is the time\n",
+    "    detection algorithm for *non-convex polygons* briefly <a href=\"#Collision-detection-between-convex-polygons-in-2D\">described above</a>. What is the time\n",
     "    complexity of this algorithm? Your answer should be in terms of $m$\n",
     "    and $n$, the number of vertices of each polygon.\n",
     "\n",
-    "3.  Investigate what geometry representations can be imported and\n",
+    "3.  Devise pseudocode for determining whether a point cloud intersects\n",
+    "    with an implicit surface, both of which are represented in\n",
+    "    transform-decoupled fashion.  (A brute-force method is fine.)  Can you\n",
+    "    generalize this pseudocode to other types of geometry, provided\n",
+    "    that an inside-outside containment tester is given? \n",
+    "\n",
+    "4.  Implement the grid-based broad-phase collision detection technique\n",
+    "    described in <a href=\"#broadphase\">Section 3.5</a> for disk-shaped.\n",
+    "    objects. Compare the running time of this algorithm with the brute-\n",
+    "    force collision detection with varying numbers of objects, added\n",
+    "    at random.\n",
+    "\n",
+    "5.  Investigate what geometry representations can be imported and\n",
     "    exported from a CAD program (e.g., Solidworks, AutoCAD). Investigate\n",
     "    what geometry representations are directly available from an RGB-D\n",
     "    camera (e.g., Microsoft Kinect, Intel Realsense). Investigate what\n",
     "    geometry representations are used in a 3D mapping program (Google\n",
     "    Project Tango, Pix4D, AutoCAD Map 3D).\n",
     "\n",
-    "4.  Experimentally investigate the running time of bounding volume\n",
+    "6.  Experimentally investigate the running time of bounding volume\n",
     "    hierarchy collision detection software. First, examine how\n",
     "    precomputation time varies with the complexity of the model. Is the\n",
     "    running time linear, quadratic, or something else? Next, examine how\n",
@@ -1180,21 +1192,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.1"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
