Updated contact info

--- a/Book.ipynb
+++ b/Book.ipynb
@@ -9,9 +9,9 @@
     "\n",
     "Kris Hauser\n",
     "\n",
-    "Duke University\n",
+    "University of Illinois at Urbana-Champaign\n",
     "\n",
-    "Last update: 10/3/2018\n",
+    "Last update: 11/25/2019\n",
     "\n",
     "\n",
     "Table of Contents\n",
@@ -149,7 +149,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.1"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
